# Janus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/client/: NetworkManager.cpp  NetworkManager.h  main.cpp  raylib_config.h
src/server/: main.cpp
src/shared/: GameData.h
